my-app/my-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: brokurly-main
spec:
  selector:
    matchLabels:
      run: brokurly-main
  replicas: 2
  template:
    metadata:
      labels:
        run: brokurly-main
    spec:
      containers:
      - name: brokurly-main
        image: 709861978753.dkr.ecr.ap-northeast-2.amazonaws.com/brokurly-main:latest
        ports:
        - containerPort: 5000
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: brokurly-register
spec:
  selector:
    matchLabels:
      run: brokurly-register
  replicas: 1
  template:
    metadata:
      labels:
        run: brokurly-register
    spec:
      containers:
      - name: brokurly-register
        image: 709861978753.dkr.ecr.ap-northeast-2.amazonaws.com/brokurly-user:latest
        ports:
        - containerPort: 5001
