my-app/my-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: brokurly-main
  labels:
    run: brokurly-main
spec:
  ports: 
  - port: 80
    protocol: TCP
    targetPort: 5000
  selector:
    run: brokurly-main
  type: NodePort
---
apiVersion: v1
kind: Service
metadata:
  name: brokurly-register
  labels:
    run: brokurly-register
spec:
  ports: 
  - port: 5001
    protocol: TCP
    targetPort: 5001
  selector:
    run: brokurly-register
  type: NodePort
