my-app/nameservice.yaml
apiVersion: v1
kind: Service
metadata: 
  name: myapp-extname
spec:
  type: ExternalName
  externalName: test.kogoon.me
