my-app/ingress.yaml
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: "ingress"
  annotations:
    kubernetes.io/ingress.class: alb
    alb.ingress.kubernetes.io/target-type: ip
    alb.ingress.kubernetes.io/scheme: internet-facing
spec:
  rules:
   - http:
      paths:
        - path: /
          pathType: Prefix
          backend:
            service:
              name: brokurly-main
              port: 
                number: 80
        - path: /register
          pathType: Prefix
          backend:
            service:
              name: brokurly-register
              port: 
                number: 5001
        - path: /user
          pathType: Prefix
          backend:
            service:
              name: brokurly-user
              port: 
                number: 5002
